tests/ui/errors/snapshots/parse_spread_not_last_arg.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:2:24]
 1 │ 
 2 │ fn test() { foo(xs..., y); }
   ·                        ┬
   ·                        ╰── argument after spread
   ╰────
  help: The `spread...` must be the last argument in the call · code: [parse.syntax_error]
