tests/ui/errors/snapshots/parse_spread_split_across_newline.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Syntax error
   ╭─[test.lis:2:33]
 1 │ 
 2 │ fn test(xs: Slice<int>) { foo(xs
   ·                                 ▲
   ·                                 ╰── expected `,` or `)`
 3 │   ...) }
   ╰────
  help: Add a comma between elements · code: [parse.syntax_error]
