tests/ui/errors/snapshots/parse_struct_field_mut.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:3]
 2 │ struct Foo {
 3 │   mut diffs: Slice<string>,
   ·   ─┬─
   ·    ╰── `mut` goes on the field's type
 4 │ }
   ╰────
  help: Place the permission right before the type, as in `items: mut Slice<int>` · code: [parse.syntax_error]
