tests/ui/errors/snapshots/parse_task_dot_access_without_call.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid `task`
   ╭─[test.lis:3:8]
 2 │ fn f() {
 3 │   task package.work
   ·        ──────┬─────
   ·              ╰── expected `()`
 4 │ }
   ╰────
  help: Add parens to call the function · code: [parse.task_missing_parens]
