tests/ui/errors/snapshots/parse_task_without_call.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid `task`
   ╭─[test.lis:4:8]
 3 │ fn f() {
 4 │   task work
   ·        ──┬─
   ·          ╰── expected `()`
 5 │ }
   ╰────
  help: Add parens to call the function · code: [parse.task_missing_parens]
