tests/ui/errors/snapshots/parse_try_block_unclosed.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Unclosed block
   ╭─[test.lis:1:14]
 1 │ fn f() { try { 1
   ·              ┬
   ·              ╰── opening brace here
   ╰────
  help: Add a closing `}` · code: [parse.unclosed_block]
