tests/ui/errors/snapshots/parse_try_without_block.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid `try`
   ╭─[test.lis:4:3]
 3 │ fn f() {
 4 │   try foo()
   ·   ─┬─
   ·    ╰── requires a block
 5 │ }
   ╰────
  help: Use `try { expression }` instead of `try expression` · code: [parse.syntax_error]
