tests/ui/errors/snapshots/parse_tuple_too_large_expression.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid tuple
   ╭─[test.lis:3:11]
 2 │ fn test() {
 3 │   let x = (1, 2, 3, 4, 5, 6);
   ·           ─────────┬────────
   ·                    ╰── 6-element tuple not allowed
 4 │ }
   ╰────
  help: For >5 elements, use a struct with named fields · code: [parse.tuple_element_count]
