tests/ui/errors/snapshots/parse_tuple_too_large_pattern.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid tuple
   ╭─[test.lis:3:7]
 2 │ fn test() {
 3 │   let (a, b, c, d, e, f) = get_tuple();
   ·       ─────────┬────────
   ·                ╰── 6-element tuple not allowed
 4 │ }
   ╰────
  help: For >5 elements, use a struct with named fields · code: [parse.tuple_element_count]
